# python_fastAPI

./: .env  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/domains/apitest/: client.py  router.py  schemas.py  service.py
app/domains/attachments/: models.py  schemas.py
app/domains/complexreport/: repository.py
app/domains/documents/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/llmtest/: client.py  router.py  schemas.py  service.py
app/domains/posts/: models.py  repository.py  router.py  schemas.py  service.py
uploads/: 2ff98810-03ed-4f8a-be79-a6a5906011d6_경찰청 RAG 구축 개요.pptx
