[project]
name = "uvfapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.8",
    "langchain-elasticsearch>=1.0.0",
    "langchain-ollama>=1.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0",
    "uvicorn>=0.49.0",
]
